cluster/monitoring/blackbox-exporter/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: blackbox-exporter
    app.kubernetes.io/version: v0.28.0
  name: blackbox-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: blackbox-exporter
  template:
    metadata:
      annotations:
        checksum/config: f35b83e99aed5bfd
      labels:
        app.kubernetes.io/name: blackbox-exporter
        app.kubernetes.io/version: v0.28.0
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - args:
        - --config.file=/etc/blackbox/blackbox.yml
        - --web.listen-address=:9115
        image: quay.io/prometheus/blackbox-exporter:v0.28.0@sha256:e753ff9f3fc458d02cca5eddab5a77e1c175eee484a8925ac7d524f04366c2fc
        name: blackbox-exporter
        ports:
        - containerPort: 9115
          name: http
        volumeMounts:
        - mountPath: /etc/blackbox
          name: config
          readOnly: true
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 200m
            memory: 64Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
      volumes:
      - name: config
        configMap:
          name: blackbox-exporter-config
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
