cluster/monitoring/blackbox-exporter/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: blackbox-exporter
    app.kubernetes.io/version: v0.28.0
  name: blackbox-exporter
spec:
  selector:
    app.kubernetes.io/name: blackbox-exporter
  ports:
  - name: http
    port: 9115
    targetPort: 9115
