cluster/monitoring/blackbox-exporter/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: blackbox-exporter-networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: blackbox-exporter
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: victoria-metrics
    ports:
    - port: 9115
      protocol: TCP
